--- a/manifest.json
+++ b/manifest.json
@@ -4,11 +4,6 @@
   "description": "Devtool to inspect atoms behaviour for recoil",
   "version": "1.0",
   "permissions": ["scripting", "tabs"],
-  "action": {
-    "default_popup": "dist/popup.html",
-    "default_icon": "icons/popup.png",
-    "default_title": "Click me"
-  },
   "author": "drupadsingh98@gmail.com",
   "content_scripts": [
     {
@@ -19,5 +14,6 @@
   ],
   "externally_connectable": {
     "matches": ["https://*/", "https://*/"]
-  }
+  },
+  "devtools_page": "dist/popup.html"
 }
