--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,18 @@
-node_modules/**
+**/node_modules/**
 package-lock.json
+**/package-lock.json
+
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+/.pnp
+.pnp.js
+
+# misc
+.DS_Store
+
+**/npm-debug.log*
+
+**/yarn-debug.log*
+
+**/yarn-error.log*
