--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack build",
-    "start": "webpack start"
+    "start": "webpack start",
+    "make:lib": "webpack build --config webpack.config.lib.js"
   },
   "author": "",
   "license": "ISC",
@@ -28,8 +29,12 @@
     "webpack-dev-server": "4.7.4"
   },
   "dependencies": {
-    "lodash": "^4.17.21",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "json-difference": "^1.9.1",
+    "lodash": "^4.17.21"
+  },
+  "peerDependencies": {
+    "recoil": "0.7.6",
+    "react": "16.13.1",
+    "react-dom": "16.13.1"
   }
 }
