Fixed library build and import of recoil-devtools

--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "devtools",
+  "name": "recoil-devtools",
+  "module": "lib/index.js",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "lib/index.js",
   "directories": {
     "lib": "lib"
   },
